auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wqvc-auth
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wqvc-auth
  template:
    metadata:
      labels:
        app: wqvc-auth
    spec:
      containers:
      - name: wqvc-auth
        image: rnsk3626/wqvc-auth:1
        ports:
        - containerPort: 7000
---
apiVersion: v1
kind: Service
metadata:
  name: wqvc-auth-svc
  namespace: ingress-nginx
spec:
  ports:
  - port: 80
    targetPort: 7000
    protocol: TCP
    name: http
  selector:
    app: wqvc-auth
