eureka-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wqvc-eureka
  namespace: ingress-nginx
spec:
  serviceName: 'wqvc-eureka'
  # n instances
  replicas: 3
  selector:
    matchLabels:
      app: wqvc-eureka
  template:
    metadata:
      labels:
        app: wqvc-eureka
    spec:
      containers:
      - name: wqvc-eureka
        image: rnsk3626/wqvc-eureka
        ports:
        - containerPort: 8761
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "1200Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /
            port: 8761
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 8761
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: wqvc-eureka-svc
  namespace: ingress-nginx
  labels:
    app: wqvc-eureka
spec:
  ports:
  - port: 80
    targetPort: 8761
    protocol: TCP
    name: cluster
  selector:
    app: wqvc-eureka
