ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ab-ingress
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: wqvc-auth-svc
          servicePort: 80
      - path: /chat
        backend:
          serviceName: wqvc-chat-svc
          servicePort: 80
      - path: /ws
        backend:
          serviceName: wqvc-chat-svc
          servicePort: 80
      - path: /static
        backend:
          serviceName: wqvc-chat-svc
          servicePort: 80
      - path: /video
        backend:
          serviceName: wqvc-video-svc
          servicePort: 443
      - path: /nginx
        backend:
          serviceName: wqvc-nginx-svc
          servicePort: 443
#      - path: /eureka
#        backend:
#          serviceName: wqvc-eureka-svc
#          servicePort: 80
